# IPCTest

./: .clangd  CMakeLists.txt  CMakePresets.json  toolchain.cmake
src/: main.cpp
